Should probably fix loading jars in production