@@ -67,10 +67,10 @@ public class DependencyManager {
 	}
 	
 	private static URL createInternalURL(Path path) {
-		final String url = "modjar://" + MusicPlayerMod.MODID + path;
-		LOGGER.debug(MARKER_LOAD, "Create mod jar url ({}) from path ({}).", url, path);
 		try {
-			return new URL(url);
+			final URL url = path.toUri().toURL();
+			LOGGER.debug(MARKER_LOAD, "Create mod jar url ({}) from path ({}).", url, path);
+			return path.toUri().toURL();
 		} catch (final MalformedURLException ex) {
 			LOGGER.error(MARKER_LOAD, "Could not create url from internal path.", ex);
 		}
